<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrintFragment"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewQuickPrintLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal"
            android:text="@string/quickprint"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/print"
            android:textAlignment="center"
            android:textSize="50sp"
            android:layout_below="@id/textViewQuickPrintLogin"/>

        <Button
            android:id="@+id/printNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/print"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/teal"
            android:text="@string/newPrint"/>

        <TextView
            android:id="@+id/sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_below="@id/printNew"/>

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/samlple_doc"
            android:layout_below="@+id/sample"/>

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/lorem_ipsum"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/printButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Print"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/itemTitle"
            android:backgroundTint="@color/teal"/>

        <Button
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Preview"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/printButton"
            android:backgroundTint="@color/teal"/>

        <ImageView
            android:id="@+id/itemImage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/samlple_doc"
            android:layout_below="@+id/preview"/>

        <TextView
            android:id="@+id/itemTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage2"
            android:padding="8dp"
            android:text="@string/lorem_ipsum"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/printButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Print"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/itemTitle2"
            android:backgroundTint="@color/teal"/>

        <Button
            android:id="@+id/preview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Preview"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/printButton2"
            android:backgroundTint="@color/teal"/>

    </RelativeLayout>
</ScrollView>